Fixed Featured Products scrollable row. Changed scrollbar style. Fixed search field to keep from moving content down.

--- a/reimagine_cards.css
+++ b/reimagine_cards.css
@@ -1,6 +1,6 @@
 .reimagine_panel-row {
 	max-width: 95vw;
-	overflow: hidden;
+	overflow-x: scroll;
 }
 
 .reimagine_product-card {
