--- a/reimagine_nav.css
+++ b/reimagine_nav.css
@@ -87,6 +87,10 @@
 	z-index: 11;
 	margin-bottom: 5px;
 }
+.reimagine_navbar-search {
+	position: absolute;
+	width: 100%;
+}
 form.reimagine_navbar-form {
 	padding: 0;
 	margin: 0;
@@ -207,7 +211,7 @@ ul.reimagine_menu li {
 		border-bottom: none;
 	}
 	#navbar-search {
-		top: -10px;
+		top: 50px;
 	}
 	.reimagine_header_container {
 		border-bottom: none;
